--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -1,7 +1,10 @@
 ---
 id: blockchain-primitives
-hide_title: true
+title: Blockchain Primitives
+pagination_label: Blockchain Primitives
 sidebar_label: Blockchain Primitives
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/blockchain-primitives
 ---
 
