--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -1,9 +1,11 @@
 ---
 id: blockchain
-hide_title: true
+title: Blockchain
+pagination_label: Blockchain
 sidebar_label: Introduction
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
