--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -1,7 +1,10 @@
 ---
 id: crowdspot
-hide_title: true
+title: Crowdspot
+pagination_label: Crowdspot
 sidebar_label: Crowdspot
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/crowdspot
 ---
 
