--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -1,7 +1,10 @@
 ---
 id: data-only-hotspots
 title: Data Only Hotspots
+pagination_label: Data Only Hotspots
 sidebar_label: Data Only Hotspots
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-hotspots
 ---
 
