--- a/docs/mine-hnt/denylist-removals.mdx
+++ b/docs/mine-hnt/denylist-removals.mdx
@@ -1,7 +1,10 @@
 ---
 id: denylist-removals
-hide_title: true
+title: Denylist Removals
+pagination_label: Denylist Removals
 sidebar_label: Denylist Removals
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/denylist-removals
 ---
 
