--- a/docs/mine-hnt/denylist.mdx
+++ b/docs/mine-hnt/denylist.mdx
@@ -4,7 +4,7 @@ title: Denylist
 pagination_label: Denylist
 sidebar_label: Denylist
 description: The Helium Network Denylist
-# Image:
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/denylist
 ---
 
