--- a/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
@@ -1,6 +1,10 @@
 ---
 id: basic-miner-operation
+title: Basic Miner Operation
+pagination_label: Basic Miner Operation
 sidebar_label: Basic Miner Operation
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/basic-miner-operation
 ---
 
