--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -1,6 +1,10 @@
 ---
 id: burn-hnt-to-maker-wallet
-sidebar_label: Burning HNT to Maker Wallet
+title: Burn HNT To Maker Wallet
+pagination_label: Burn HNT To Maker Wallet
+sidebar_label: Burning HNT To Maker Wallet
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet
 ---
 
