--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services.mdx
@@ -1,6 +1,10 @@
 ---
 id: hotspot-ble-services
+title: Hotspot BLE Services
+pagination_label: Hotspot BLE Services
 sidebar_label: Hotspot BLE Services
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services
 ---
 
