--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -1,6 +1,10 @@
 ---
 id: hotspot-integration-testing
+title: Hotspot Integration Testing
+pagination_label: Hotspot Integration Testing
 sidebar_label: Hotspot Integration Testing
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing
 ---
 
