--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -1,6 +1,10 @@
 ---
 id: maker-approval-auditing
-sidebar_label: Approval and Auditing Process
+title: Maker Approval Auditing
+pagination_label: Maker Approval Auditing
+sidebar_label: Approval And Auditing Process
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing
 ---
 
