--- a/docs/mine-hnt/full-hotspots/become-a-maker/security-requirements.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/security-requirements.mdx
@@ -1,6 +1,10 @@
 ---
 id: security-requirements
+title: Security Requirements
+pagination_label: Security Requirements
 sidebar_label: Security Requirements
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/security-requirements
 ---
 
