--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -1,6 +1,10 @@
 ---
 id: full-hotspots
+title: Full Hotspots
+pagination_label: Full Hotspots
 sidebar_label: Full Hotspots
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots
 ---
 
