--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -1,7 +1,10 @@
 ---
 id: helium-hotspot-app
-title: Helium Hotspot App (is Being Depreciated)
+title: Helium Hotspot App (Is Being Depreciated)
+pagination_label: Helium Hotspot App
 sidebar_label: 🚫 Helium Hotspot App 🚫
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/helium-hotspot-app
 ---
 
