--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -1,7 +1,10 @@
 ---
 id: maker-apps
 title: Maker Apps
+pagination_label: Maker Apps
 sidebar_label: Maker Apps
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/maker-apps
 ---
 
