--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -1,9 +1,11 @@
 ---
 id: mine-hnt
-hide_title: true
+title: Mine HNT
+pagination_label: Mine HNT
 sidebar_label: Introduction
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
