--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -1,7 +1,10 @@
 ---
 id: understanding-hotspot-status
 title: Understanding Hotspot Status
+pagination_label: Understanding Hotspot Status
 sidebar_label: Understanding Hotspot Status
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/understanding-hotspot-status
 ---
 
