--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -1,6 +1,10 @@
 ---
 id: docker-integration
+title: Docker Integration
+pagination_label: Docker Integration
 sidebar_label: Docker Integration
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/docker-integration
 ---
 
