--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-wifi-configuration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-wifi-configuration.mdx
@@ -1,6 +1,10 @@
 ---
 id: hotspot-wifi-configuration
+title: Hotspot WiFi Configuration
+pagination_label: Hotspot WiFi Configuration
 sidebar_label: Hotspot WiFi Configuration
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/full-hotspots/become-a-maker/hotspot-wifi-configuration
 ---
 
