--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-faqs-resources-providers
-title: FAQs, Resources, and Providers
-sidebar_label: FAQs, Resources, and Providers
+title: FAQs, Resources, And Providers
+pagination_label: Validators FAQs Resources Providers
+sidebar_label: FAQs, Resources, And Providers
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/faqs-resources-providers
 ---
 
