--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-mainnet-deployment-guide
 title: Validator Deployment Guide - Mainnet
+pagination_label: Validators Mainnet Deployment Guide
 sidebar_label: Deployment Guide - Mainnet
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/deployment-guide
 ---
 
