--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-mainnet-release
 title: Validators Release
+pagination_label: Validators Mainnet Release
 sidebar_label: Validator Release
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/validators-release
 ---
 
