--- a/docs/mine-hnt/validators/mainnet/wallet.mdx
+++ b/docs/mine-hnt/validators/mainnet/wallet.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-mainnet-wallet
-title: Configure a Wallet
-sidebar_label: Configure a Wallet
+title: Configure A Wallet
+pagination_label: Validators Mainnet Wallet
+sidebar_label: Configure A Wallet
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/mainnet/wallet
 ---
 
