--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-monitoring
-title: Monitoring a Validator
+title: Monitoring A Validator
+pagination_label: Validators Monitoring
 sidebar_label: Monitoring
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/monitoring
 ---
 
