--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-penalties
-title: Validator Penalties and Impact on Rewards
+title: Validator Penalties And Impact On Rewards
+pagination_label: Validators Penalties
 sidebar_label: Penalties
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/penalties
 ---
 
