--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-requirements
 title: Technical Requirements
+pagination_label: Validators Requirements
 sidebar_label: Technical Requirements
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/requirements
 ---
 
