--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-testnet-deployment-guide
 title: Validator Deployment Guide (Testnet)
+pagination_label: Validators Testnet Deployment Guide
 sidebar_label: Deployment Guide
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/deployment-guide
 ---
 
