--- a/docs/mine-hnt/validators/testnet/design.mdx
+++ b/docs/mine-hnt/validators/testnet/design.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-testnet-design
 title: Validators Design (Testnet)
+pagination_label: Validators Testnet Design
 sidebar_label: Design
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/design
 ---
 
