--- a/docs/mine-hnt/validators/testnet/expectations.mdx
+++ b/docs/mine-hnt/validators/testnet/expectations.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-testnet-expectations
 title: Validator Expectations (Testnet)
+pagination_label: Validators Testnet Expectations
 sidebar_label: Expectations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/expectations
 ---
 
