--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-testnet-test-cases
 title: Test Cases
+pagination_label: Validators Testnet Test Cases
 sidebar_label: Test Cases
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/test-cases
 ---
 
