--- a/docs/mine-hnt/validators/testnet/wallet.mdx
+++ b/docs/mine-hnt/validators/testnet/wallet.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-testnet-wallet
-title: Configure a Wallet (Testnet)
-sidebar_label: Configure a Wallet
+title: Configure A Wallet (Testnet)
+pagination_label: Validators Testnet Wallet
+sidebar_label: Configure A Wallet
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/testnet/wallet
 ---
 
