--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators-troubleshooting
 title: Troubleshooting
+pagination_label: Validators Troubleshooting
 sidebar_label: Troubleshooting
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/troubleshooting
 ---
 
