--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -1,8 +1,10 @@
 ---
 id: validators-and-voting-power
-hide_title: true
-title: Validators and Voting Power
-sidebar_label: Validators and Voting Power
+title: Validators And Voting Power
+pagination_label: Validators And Voting Power
+sidebar_label: Validators And Voting Power
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators/validators-and-voting-power
 ---
 
