--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -1,7 +1,10 @@
 ---
 id: validators
 title: Validators
+pagination_label: Validators
 sidebar_label: Validators
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/validators
 ---
 
