--- a/docs/open-source/docs/installation.mdx
+++ b/docs/open-source/docs/installation.mdx
@@ -1,7 +1,10 @@
 ---
 id: installation
-hide_title: false
+title: Installation
+pagination_label: Installation
 sidebar_label: Installation Guide
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /open-source/docs/installation
 ---
 
