--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -1,7 +1,10 @@
 ---
 id: open-source
-hide_title: true
+title: Open Source
+pagination_label: Open Source
 sidebar_label: Overview
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /open-source
 ---
 
