--- a/docs/troubleshooting/hotspot-led.mdx
+++ b/docs/troubleshooting/hotspot-led.mdx
@@ -1,7 +1,10 @@
 ---
 id: hotspot-led
 title: Hotspot LED Meaning
+pagination_label: Hotspot LED
 sidebar_label: Hotspot LED Meaning
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /troubleshooting/hotspot-led
 ---
 
