--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -1,7 +1,10 @@
 ---
 id: hotspot-setup-troubleshooting
 title: Hotspot Setup
+pagination_label: Hotspot Setup Troubleshooting
 sidebar_label: Hotspot Setup
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/hotspot-setup-troubleshooting
 ---
 
