--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -1,7 +1,10 @@
 ---
 id: network-troubleshooting
 title: Network Troubleshooting
+pagination_label: Network Troubleshooting
 sidebar_label: Network Troubleshooting
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /troubleshooting/network-troubleshooting
 ---
 
