--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -1,7 +1,10 @@
 ---
 id: replace-sd-card
 title: Replacing SD Card
+pagination_label: Replace SD Card
 sidebar_label: Replacing SD Card
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /troubleshooting/replace-sd-card
 ---
 
