--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -1,7 +1,10 @@
 ---
 id: understanding-witnesses
 title: Understanding Witnesses
-sidebar_label: Understanding Witnesses and Relayed Hotspots
+pagination_label: Understanding Witnesses
+sidebar_label: Understanding Witnesses And Relayed Hotspots
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /troubleshooting/understanding-witnesses
 ---
 
