--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -1,6 +1,6 @@
 ---
 id: 5g-on-helium
-hide_title: true
+title: 5G On Helium
 pagination_label: 5G On Helium
 sidebar_label: Introduction
 description: Helium Documentation
