--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -1,6 +1,10 @@
 ---
 id: accounts
+title: Accounts
+pagination_label: Accounts
 sidebar_label: Accounts
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/accounts
 ---
 
