--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -1,6 +1,10 @@
 ---
 id: blocks
+title: Blocks
+pagination_label: Blocks
 sidebar_label: Blocks
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/blocks
 ---
 
