--- a/docs/api/blockchain/chain-variables.mdx
+++ b/docs/api/blockchain/chain-variables.mdx
@@ -1,6 +1,10 @@
 ---
 id: chain-variables
+title: Chain Variables
+pagination_label: Chain Variables
 sidebar_label: Chain Variables
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/chain-variables
 ---
 
