--- a/docs/api/blockchain/challenges.mdx
+++ b/docs/api/blockchain/challenges.mdx
@@ -1,6 +1,10 @@
 ---
 id: challenges
+title: Challenges
+pagination_label: Challenges
 sidebar_label: Challenges
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/challenges
 ---
 
