--- a/docs/api/blockchain/cities.mdx
+++ b/docs/api/blockchain/cities.mdx
@@ -1,6 +1,10 @@
 ---
 id: cities
+title: Cities
+pagination_label: Cities
 sidebar_label: Cities
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/cities
 ---
 
