--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -1,6 +1,10 @@
 ---
 id: dc-burns
+title: DC Burns
+pagination_label: DC Burns
 sidebar_label: DC Burns
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/dc-burns
 ---
 
