--- a/docs/api/blockchain/elections.mdx
+++ b/docs/api/blockchain/elections.mdx
@@ -1,6 +1,10 @@
 ---
 id: elections
+title: Elections
+pagination_label: Elections
 sidebar_label: Elections
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/elections
 ---
 
