--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -1,6 +1,10 @@
 ---
 id: hotspots
+title: Hotspots
+pagination_label: Hotspots
 sidebar_label: Hotspots
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/hotspots
 ---
 
