--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -1,6 +1,10 @@
 ---
 id: introduction
+title: Introduction
+pagination_label: Introduction
 sidebar_label: Introduction
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/introduction
 ---
 
