--- a/docs/api/blockchain/locations.mdx
+++ b/docs/api/blockchain/locations.mdx
@@ -1,6 +1,10 @@
 ---
 id: locations
+title: Locations
+pagination_label: Locations
 sidebar_label: Locations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/locations
 ---
 
