--- a/docs/api/blockchain/oracle-prices.mdx
+++ b/docs/api/blockchain/oracle-prices.mdx
@@ -1,6 +1,10 @@
 ---
 id: oracle-prices
+title: Oracle Prices
+pagination_label: Oracle Prices
 sidebar_label: Oracle Prices
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/oracle-prices
 ---
 
