--- a/docs/api/blockchain/ouis.mdx
+++ b/docs/api/blockchain/ouis.mdx
@@ -1,6 +1,10 @@
 ---
 id: ouis
+title: OUIs
+pagination_label: OUIs
 sidebar_label: OUIs
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/ouis
 ---
 
