--- a/docs/api/blockchain/pending-transactions.mdx
+++ b/docs/api/blockchain/pending-transactions.mdx
@@ -1,6 +1,10 @@
 ---
 id: pending-transactions
+title: Pending Transactions
+pagination_label: Pending Transactions
 sidebar_label: Pending Transactions
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/pending-transactions
 ---
 
