--- a/docs/api/blockchain/rewards.mdx
+++ b/docs/api/blockchain/rewards.mdx
@@ -1,6 +1,10 @@
 ---
 id: rewards
+title: Rewards
+pagination_label: Rewards
 sidebar_label: Rewards
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/rewards
 ---
 
