--- a/docs/api/blockchain/state-channels.mdx
+++ b/docs/api/blockchain/state-channels.mdx
@@ -1,6 +1,10 @@
 ---
 id: state-channels
+title: State Channels
+pagination_label: State Channels
 sidebar_label: State Channels
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/state-channels
 ---
 
