--- a/docs/api/blockchain/transactions.mdx
+++ b/docs/api/blockchain/transactions.mdx
@@ -1,6 +1,10 @@
 ---
 id: transactions
+title: Transactions
+pagination_label: Transactions
 sidebar_label: Transactions
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/transactions
 ---
 
