--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -1,7 +1,10 @@
 ---
 id: console
-hide_title: true
+title: Console
+pagination_label: Console
 sidebar_label: Console
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/console
 ---
 
