--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -1,6 +1,10 @@
 ---
 id: home
+title: Home
+pagination_label: Home
 sidebar_label: Home
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api
 ---
 
