--- a/docs/api/blockchain/assert-locations.mdx
+++ b/docs/api/blockchain/assert-locations.mdx
@@ -1,6 +1,10 @@
 ---
 id: assert-locations
+title: Assert Locations
+pagination_label: Assert Locations
 sidebar_label: Assert Locations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/assert-locations
 ---
 
