--- a/docs/api/blockchain/stats.mdx
+++ b/docs/api/blockchain/stats.mdx
@@ -1,6 +1,10 @@
 ---
 id: stats
+title: Stats
+pagination_label: Stats
 sidebar_label: Stats
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/stats
 ---
 
