--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -1,6 +1,10 @@
 ---
 id: validators
+title: Validators
+pagination_label: Validators
 sidebar_label: Validators
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/validators
 ---
 
