--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -1,6 +1,10 @@
 ---
 id: multi-packets
+title: Packet Configurations
+pagination_label: Packet Configurations
 sidebar_label: Packet Configurations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/multi-packets
 ---
 
