--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -1,7 +1,10 @@
 ---
 id: balena-data-only-hotspot
 title: Data Only Hotspot with balena + Raspberry Pi + RAK Concentrator RAK2287
+pagination_label: balena.io + Raspberry Pi + RAK Concentrators (RAK2287)
 sidebar_label: balena.io + Raspberry Pi + RAK Concentrators (RAK2287)
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-guides/balena-data-only-hotspot
 ---
 
