--- a/docs/mine-hnt/data-only-guides/dragino.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino.mdx
@@ -1,7 +1,10 @@
 ---
 id: dragino
 title: Dragino Data Only Hotspot Setup
+pagination_label: DDragino LPS80/DLOS8
 sidebar_label: Dragino LPS80/DLOS8
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-guides/dragino
 ---
 
