--- a/docs/mine-hnt/data-only-guides/kerlink.mdx
+++ b/docs/mine-hnt/data-only-guides/kerlink.mdx
@@ -1,7 +1,10 @@
 ---
 id: kerlink
 title: Kerlink Data Only Hotspot Setup
+pagination_label: Kerlink iStation, iFemtoCell, iFemtoCell Evolution
 sidebar_label: Kerlink iStation, iFemtoCell, iFemtoCell Evolution
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-guides/kerlink
 ---
 
