--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -1,7 +1,10 @@
 ---
 id: rak-concentrators
 title: Data Only Hotspot Setup with RAK Concentrator + Raspberry Pi
+pagination_label: RAK Concentrators (RAK2245/RAK2247/RAK2287) + Raspberry Pi
 sidebar_label: RAK Concentrators (RAK2245/RAK2247/RAK2287) + Raspberry Pi
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-guides/rak-concentrators
 ---
 
