--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -1,7 +1,10 @@
 ---
 id: dragino-pg1301
 title: Data Only Hotspot Setup Dragino PG1301 and Raspberry Pi
+pagination_label: Dragino PG1301 + Raspberry Pi
 sidebar_label: Dragino PG1301 + Raspberry Pi
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/data-only-guides/dragino-pg1301
 ---
 
